--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
         <nav class="navbar">
-            <a href="#">CV</a>
+            <a href="https://drive.google.com/file/d/1wUXhXsPyr6A1V0aGfwEoJe7nKw80R2HT/view">CV</a>
             <a href="https://scholar.google.es/citations?hl=es&user=nRp_BQYAAAAJ&view_op=list_works&gmla=AHoSzlVVnWDnLI-YDCELZKc9R9mFQwJQdXHV-3dgqoN_X1AG2LLiNf2TobP8jKowV0e6rRTHRkT7Ig7McQCk6hcKpPPFfDeiU1NbI4FC">Papers</a>
             <a href="https://periodicoeldiario.com/?s=Juan+Pablo+Cely">Publications</a>
             <a href="https://github.com/JuanCely999">GitHub</a>
@@ -41,7 +41,7 @@
         </p> Job profile in research, data analysis, and economic and financial reports.
         
 
-        <a href="#" class="btn">CV</a>
+        <a href="https://drive.google.com/file/d/1wUXhXsPyr6A1V0aGfwEoJe7nKw80R2HT/view" class="btn">CV</a>
         <a href="https://scholar.google.es/citations?hl=es&user=nRp_BQYAAAAJ&view_op=list_works&gmla=AHoSzlVVnWDnLI-YDCELZKc9R9mFQwJQdXHV-3dgqoN_X1AG2LLiNf2TobP8jKowV0e6rRTHRkT7Ig7McQCk6hcKpPPFfDeiU1NbI4FC" class="btn">Papers</a>
         <a href="https://periodicoeldiario.com/?s=Juan+Pablo+Cely" class="btn">Publications</a>
         <a href="https://github.com/JuanCely999" class="btn">GitHub</a>
