--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
         <p>Economist, professional with experience as a researcher, and data analyst, knowledge of Excel, Power Bi, learning Python code, R, SQL, exploratory data analysis, database management, financial indicators, logistics, and reporting. Ability to work in a team, under pressure, and according to established objectives.
 
-        </p> Job profile in research, data analysis, and economic and financial reports.
+        </p> Job profile in research, data analysis, and economic and financial reports in universities and companies such as BEMORE, Nueva Licorera de Boyacá and
+OPREC.
         
 
-        <a href="https://drive.google.com/file/d/1wUXhXsPyr6A1V0aGfwEoJe7nKw80R2HT/view" class="btn">CV</a>
+        <a href="https://doc-08-84-prod-02-apps-viewer.googleusercontent.com/viewer2/prod-02/pdf/pm1iap1cu092lscmtf5ub3d5530ge71l/nsav0ul4uo2e70aaps5ndjids0efcmmt/1684668375000/3/116470391993194324811/APznzabxcEJ-Exg5YuV7YfgQfN5s45YUK4rq8jvKLWH4eCEHiZ6v9YIcpwFpgAICR8dI7OWXzfSJOYAZo92SOiAvUoWDAhDwD7b4O55CYzR9qIq_Kku6Welca1QHWCSdnKOh12gPOm_8ZRTjjbjP0FUNP8PYfQBm-csZ4uSLVaL7vRgDQlT1eXFruZqUj4gTvWXdNRtvPhpdHGYJb4ZtCnN7f7FDbGaVEaTEt4M5QbMVrhm4EfrnlpTtcoKa2tiSn9U7sFr-1OQjA_X8830mYjhauLRQ3y5D5ODaRc1EJzyijDIM3humJVKuI-pneVx-H99cIz2xEtyJSAlmQszmkKDMfhVzYhyE4HjN_y24tWXdFQV3pDo4T7qKyDMScZl4WTlyZKblYMBTZwd52_menUxZvDpej21nXQ==?authuser=2&nonce=kna76oo7qtveq&user=116470391993194324811&hash=u9tq5bpv589bkn4kn922hogdp1patl1g" class="btn">CV</a>
         <a href="https://scholar.google.es/citations?hl=es&user=nRp_BQYAAAAJ&view_op=list_works&gmla=AHoSzlVVnWDnLI-YDCELZKc9R9mFQwJQdXHV-3dgqoN_X1AG2LLiNf2TobP8jKowV0e6rRTHRkT7Ig7McQCk6hcKpPPFfDeiU1NbI4FC" class="btn">Papers</a>
         <a href="https://periodicoeldiario.com/?s=Juan+Pablo+Cely" class="btn">Publications</a>
         <a href="https://github.com/JuanCely999" class="btn">GitHub</a>
