--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Juan_Pablo_Cely</title>
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6QVMY2Q03W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6QVMY2Q03W');
+</script>
 <body>
 
     <div class="head">
