--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    <link rel="stylesheet" href="style.css">
+    <title>Juan_Pablo_Cely</title>
+  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ETK8YZB0K"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -11,6 +17,8 @@
 
   gtag('config', 'G-2ETK8YZB0K');
 </script>
+</head>
+
   
 <body>
 
