--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     <link rel="stylesheet" href="style.css">
     <title>Juan_Pablo_Cely</title>
-  <!-- Google tag (gtag.js) -->
+  <-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2ETK8YZB0K"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
