--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         <a href="https://github.com/JuanCely999" class="btn">GitHub</a>
         <a href="https://www.linkedin.com/in/juan-cely04/" class="btn">Linkedin</a>
         <a href="https://twitter.com/JCely04" class="btn">Twitter</a>  
+ </p>Juan Pablo Cely Acero
+        <a href="https://drive.google.com/file/d/1LVGZctgtUL2AGgTLwR_fVosSrht245AJ/view" class="btn">CV</a>
+        <a href="https://scholar.google.es/citations?hl=es&user=nRp_BQYAAAAJ&view_op=list_works&gmla=AHoSzlVVnWDnLI-YDCELZKc9R9mFQwJQdXHV-3dgqoN_X1AG2LLiNf2TobP8jKowV0e6rRTHRkT7Ig7McQCk6hcKpPPFfDeiU1NbI4FC" class="btn">Papers</a>
+        <a href="https://periodicoeldiario.com/?s=Juan+Pablo+Cely" class="btn">Publications</a>
+        <a href="https://github.com/JuanCely999" class="btn">GitHub</a>
+        <a href="https://www.linkedin.com/in/juan-cely04/" class="btn">Linkedin</a>
+        <a href="https://twitter.com/JCely04" class="btn">Twitter</a> 
+
+
+                <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=juanpablocely1@gmail.com">juanpablocely1@gmail.com</a>
 
         
         </p>Juan Pablo Cely Acero
